Fix fetching for easy_profiler

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -24,6 +24,11 @@ include(FetchContent)
 ###### easy_profiler
 
 message(STATUS "Fetching easy_profiler...")
+if(EXISTS ${PROJECT_LIBRARY_SOURCE_DIR}/easy_profiler)
+    add_subdirectory(${PROJECT_LIBRARY_SOURCE_DIR}/easy_profiler)
+endif()
+
+if(NOT TARGET easy_profiler)
 FetchContent_Declare(
     easy_profiler_project
     GIT_REPOSITORY      https://github.com/yse/easy_profiler.git
@@ -33,6 +38,8 @@ FetchContent_Declare(
     UPDATE_DISCONNECTED ON
 )
 FetchContent_MakeAvailable(easy_profiler_project)
+endif()
+
 add_custom_command(TARGET ${CORE_TARGET} PRE_LINK
     DEPENDS 
     $<$<BOOL:$<TARGET_PROPERTY:CONFIG_CORE_PROFILER_ENABLE>>:easy_profiler>
