add audio manager

--- a/core/include/core/Kconfig
+++ b/core/include/core/Kconfig
@@ -23,6 +23,7 @@ config CORE_BUILD_DOXYGEN_MAN
     bool "Generate MANPAGE"
     default n
 
+source "audio/Kconfig"
 source "utils/Kconfig"
 source "graphics/Kconfig"
 
