set default renderer to opengl

--- a/core/include/core/graphics/Kconfig
+++ b/core/include/core/graphics/Kconfig
@@ -2,6 +2,7 @@ menu "Graphics"
 
 choice
     prompt "Default Renderer"
+    default CORE_RENDERER_DEFAULT_OPENGL
     help
         Specifies the default renderer to use
 
