disable rpath origin

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,9 @@ set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/kconfig-cmake;${CMAKE_MODULE_PA
 include(Kconfig)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-SET(CMAKE_SKIP_BUILD_RPATH FALSE)
-SET(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
-SET(CMAKE_INSTALL_RPATH "$\{ORIGIN\}")
+# SET(CMAKE_SKIP_BUILD_RPATH FALSE)
+# SET(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
+# SET(CMAKE_INSTALL_RPATH "$\{ORIGIN\}")
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/out")
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/out")
